# narractive

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config.template.yaml  docker-compose.yml  docker-entrypoint.sh  f5_tts_bridge.py  pyproject.toml  requirements-docker.txt  requirements.txt
.claude/: memory.md  settings.json
.claude/agents/: product-owner.md  tts-specialist.md  video-automation.md
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
examples/: custom_tts_plugin.py
examples/filtermate/: assemble_video_standalone.py  config.yaml  generate_diagrams_standalone.py  generate_narration_standalone.py  generate_video.bat  narrations.yaml  produce_v01.bat
examples/filtermate/diagrams/: mermaid_definitions.py  template.html
examples/filtermate/sequences/: __init__.py  seq00_intro.py  seq01_problem.py  seq02_install.py  seq03_interface.py  seq04_filtering_demo.py  seq05_exploration.py  seq06_export.py  seq07_backends.py  seq08_architecture.py  seq09_advanced.py  seq10_conclusion.py
examples/filtermate/sequences/v01/: __init__.py  s00_hook.py  s01_install.py  s02_first_launch.py  s03_sidebar.py  s04_first_filter.py  s05_config_debug.py  s06_conclusion.py
narractive/: __init__.py  __main__.py  cli.py  config_schema.py
narractive/bridges/: __init__.py  xtts_bridge.py
narractive/core/: __init__.py  app_automator.py  diagram_generator.py  filtermate_adapter.py  frame_capturer.py  narrator.py  pipeline_state.py  qgis_automator.py  qgis_bridge.py  qgis_controller.py  qgis_headless.py  qgis_hybrid.py  qgis_snapshot.py  report.py  subtitles.py  text_preprocessor.py  timeline.py  tts_base.py  video_assembler.py
narractive/diagrams/: i18n.py
narractive/qgis_plugin/: __init__.py  metadata.txt  plugin_main.py
narractive/scripts/: _recal_sidebar.py  init_project.py
narractive/sequences/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_init.py  test_config_schema.py  test_diagram_generator.py  test_filtermate_adapter.py  test_frame_capturer.py  test_i18n.py  test_narrator.py  test_obs_controller.py  test_package.py  test_sequences.py  test_sprint3.py  test_sprint4.py  test_sprint5.py  test_sprint6.py  test_sprint7_hybrid.py  test_subtitles.py  test_text_preprocessor.py  test_timeline.py  test_video_assembler.py
video_automation/: __init__.py  __main__.py  cli.py  config_schema.py
video_automation/bridges/: f5_tts_bridge.py  kokoro_bridge.py
video_automation/core/: __init__.py  app_automator.py  diagram_generator.py  frame_capturer.py  narrator.py  obs_controller.py  pipeline_state.py  qgis_automator.py  qgis_bridge.py  qgis_controller.py  qgis_headless.py  qgis_hybrid.py  qgis_snapshot.py  report.py  subtitles.py  text_preprocessor.py  timeline.py  tts_base.py  video_assembler.py
video_automation/diagrams/: i18n.py  template.html
video_automation/qgis_plugin/: __init__.py  metadata.txt  plugin_main.py
video_automation/scripts/: _recal_sidebar.py  calibrate.py  init_project.py  setup_obs.py
video_automation/sequences/: __init__.py  base.py
